--- a/static/styles.css
+++ b/static/styles.css
@@ -76,16 +76,14 @@ html body {
     margin-right: 10px;
 }
 
-.sort-by-btn,
-.layout-btn {
+.sort-by-btn {
     background: none;
     padding: 0px;
     border: none;
     width: 50.15px;
 }
 
-.sort-by-items,
-.layout-items {
+.sort-by-items {
     position: absolute;
     color: black;
     display: none;
@@ -95,16 +93,14 @@ html body {
     z-index: 1;
 }
 
-.sort-by-items a,
-.layout-items a {
+.sort-by-items a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
-.sort-by-btn:hover,
-.layout-btn:hover {
+.sort-by-btn:hover {
     background-color: rgb(255, 143, 143);
     border-radius: 15px;
     width: 50.15px;
@@ -114,12 +110,7 @@ html body {
     display: block;
 }
 
-.main-body-top-item-3:hover .layout-items {
-    display: block;
-}
-
-.sort-by-items a:hover,
-.layout-items a:hover {
+.sort-by-items a:hover {
     background-color: #f1f1f1;
     border-radius: 5px;
 }
