--- a/templates/dashboard01.py.jinja
+++ b/templates/dashboard01.py.jinja
@@ -6,6 +6,7 @@
 
 {% block main %}
      <div class="main-body-top">
+        <div class="temp"></div>
         <div class="main-body-top-container">
             <div class="main-body-top-item-1">
                 <button class="sort-by-btn">Sort By</button>
@@ -20,6 +21,7 @@
                 </form>
             </div>
         </div>
+        <div class="temp"></div>
     </div>
 
      <div class="main-body-middle" id="middle-container">
