--- a/templates/dashboard01.py.jinja
+++ b/templates/dashboard01.py.jinja
@@ -1,7 +1,7 @@
 {% extends "layout01.py.jinja" %}
 
 {% block title %}
-    Dashboard
+    AlmostTwiter/Dashboard
 {% endblock %}
 
 {% block main %}
